Task 4 mostly done.

--- a/Assignment 03/report/bibliography.bib
+++ b/Assignment 03/report/bibliography.bib
@@ -16,3 +16,14 @@
   year={1970},
   publisher={Gordon and Breach}
 }
+
+@article{maradudin2018features,
+  title={Features in the diffraction of a scalar plane wave from doubly-periodic Dirichlet and Neumann surfaces},
+  author={Maradudin, Alexei A and P{\'e}rez-Ch{\'a}vez, Veronica and J{\k{e}}drzejewski, Arkadiusz and Simonsen, Ingve},
+  journal={Low Temperature Physics},
+  volume={44},
+  number={7},
+  pages={733--743},
+  year={2018},
+  publisher={AIP Publishing}
+}
