--- a/Assignment 03/report/report.tex
+++ b/Assignment 03/report/report.tex
@@ -9,7 +9,7 @@
 \usepackage{enumitem}
 \usepackage{soulutf8}
 \usepackage[normalem]{ulem} % \sout and \xout for strikethrough/cancel text
-% \usepackage{layouts} % so we can do \printinunitsof{in}\prntlen{\textwidth}
+\usepackage{layouts} % so we can do \printinunitsof{in}\prntlen{\textwidth}
 \usepackage{mathtools}
 \usepackage{commath2, commath2-additions}
 \usepackage{bm} % bold math
@@ -103,8 +103,9 @@
 
 \section*{Introduction}
 
-% textwidth: \printinunitsof{in}\prntlen{\textwidth}
-% linewidth: \printinunitsof{in}\prntlen{\linewidth}
+textwidth: \printinunitsof{in}\prntlen{\textwidth}
+linewidth: \printinunitsof{in}\prntlen{\linewidth}
+textheight: \printinunitsof{in}\prntlen{\textheight}
 
 \cite{powell1970hybrid}
 
