--- a/Assignment 03/report/results.tex
+++ b/Assignment 03/report/results.tex
@@ -1,2 +1,46 @@
 %!TEX root = report.tex
-\subsection*{Particle in a box}
+% \subsection*{}
+
+\begin{figure}[ht!]%
+\centering%
+\includegraphics{figs/task2.pdf}%
+\caption{Plot of $\mathcal{U}$ as function of the surface profile amplitude $\xi_0$ for normal incidence, $\vec k_\| = 0$. In the left plot we have used $a/\lambda=0.5$ and in the right $a/\lambda=3.5$. The results for both Dirichlet and Neumann doubly periodic cosine surfaces are shown. A value of $H=9$ was used in all computations. \label{fig:task2conservation}}%
+\end{figure}
+
+\begin{figure}[ht!]%
+\centering%
+\includegraphics{figs/fig1.pdf}%
+\caption{Fig1 \label{fig:fig1}}%
+\end{figure}
+
+\begin{figure}[ht!]%
+\centering%
+\includegraphics{figs/fig2.pdf}%
+\caption{Fig2 \label{fig:fig2}}%
+\end{figure}
+
+
+\begin{figure}[p!]%
+\centering%
+\includegraphics{figs/fig4.pdf}%
+\caption{Fig4 \label{fig:fig4}}%
+\end{figure}
+
+\begin{figure}[htp!]%
+\centering%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig03.pdf}%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig09.pdf}%
+\\%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig04.pdf}%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig10.pdf}%
+\\%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig05.pdf}%
+\includegraphics[width=0.49\textwidth]{figs/task4_fig11.pdf}%
+% \caption{Fig4 \label{fig:fig4}}%
+\end{figure}
+
+\begin{figure}[p!]%
+\centering%
+\includegraphics{figs/task4_m0.pdf}%
+\caption{Diffraction efficiency as function of angle of incidence for $m=0$, for three types of surface profile functions and both Dirichlet and Neumann boundary conditions. \label{fig:m0}}%
+\end{figure}
