--- a/Assignment 03/report/theory.tex
+++ b/Assignment 03/report/theory.tex
@@ -6,6 +6,7 @@ We will solve numerically the \emph{periodic surface Rayleigh equation}
     = -\hat I \del[2]{\alpha_0 \del[1]{k_{\|}, \omega} \big\vert \vec K_{\|} - \vec k_{\|}} N\del[1]{\vec K_{\|} \big\vert \vec k_{\|}},
     \label{eq:rayleigh}
 \end{equation}
+or
 \begin{equation}
     \sum_{\vec K_{\|}'} \hat I\del[2]{-\alpha_0 \del[1]{K_{\|}', \omega} \big\vert \vec G_{\|} - \vec G_{\|}'} M\del[1]{\vec K_{\|} \big\vert \vec K_{\|}'} r\del[1]{\vec K_{\|}' \big\vert \vec k_{\|}} 
     = -\hat I \del[2]{\alpha_0 \del[1]{k_{\|}, \omega} \big\vert \vec G_{\|}} N\del[1]{\vec K_{\|} \big\vert \vec k_{\|}},
@@ -34,14 +35,14 @@ with
         i\sqrt{k_\|^2 - \frac{\omega^2}{c^2}} &k_\|^2 \geq \frac{\omega^2}{c^2}
     \end{cases}.
 \end{equation}
-The wavelength of the incident beam is denoted by $\lambda$, and is related to the angular frequency $\omega$ via $\omega/c = 2\pi/\lambda$. From geometry considerations it can be shown
+The wavelength of the incident beam is denoted by $\lambda$, and is related to the angular frequency $\omega$ via $\omega/c = 2\pi/\lambda$. From geometry considerations it can be shown that
 \begin{equation}
     \vec k_\| = \frac{\omega}{c}\sin\theta_0 \del[1]{\cos\phi_0, \sin\phi_0, 0}.
 \end{equation}
 
-The set of solutions $\cbr[1]{r\del[1]{\vec K_{\|}'\big\vert \vec k_{\|}}}$ of \cref{eq:rayleigh} describes the reflection of an incident scalar wave of lateral wave vector $\vec_\|$ that is scattered by the periodic surface $\xi(\vec x_\|$ into reflected waves characterized by the wave vector $\vec K_\|'$.
+The set of solutions $\cbr[1]{r\del[1]{\vec K_{\|}'\big\vert \vec k_{\|}}}$ of \cref{eq:rayleigh} describes the reflection of an incident scalar wave of lateral wave vector $\vec_\|$ that is scattered by a periodic surface $\xi(\vec x_\|)$ into reflected waves characterized by the wave vector $\vec K_\|'$.
 
-The $\hat I$-integrals \hl{are defined elsewhere}.
+The $\hat I$-integrals are defined in the next section.
 
 To be able to solve \cref{eq:rayleigh} we limit the values of
 \begin{equation}
@@ -51,7 +52,7 @@ by limiting the components of $\vec h = (h_1, h_2)$ to
 \begin{equation}
     h_i \in \sbr{-H, H} ~~(h_i \in \mathbb{Z}),
 \end{equation}
-where $H$ is a positive integer. We then have a finite set of $N = n^2 = (2H)^2$ unknown scattering amplitudes $r(\vec K_\|' \big\vert \vec k_\|)$. We then let $\vec K_\|$ take the same values as $\vec K_\|'$, which gives us $N$ different evaluations of \cref{eq:rayleigh}. We can then express \cref{eq:rayleigh} as a linear system of equations $\vec A \vec x = \vec b$, where
+where $H$ is a positive integer. We then have a finite set of $N = n^2 = (2H+1)^2$ unknown scattering amplitudes $r(\vec K_\|' \big\vert \vec k_\|)$. We then let $\vec K_\|$ take the same values as $\vec K_\|'$, which gives us $N$ different variants of \cref{eq:rayleigh}. We can then express \cref{eq:rayleigh} as a linear system of $N$ equations and $N$ unknowns, $\vec A \vec x = \vec b$, where
 \begin{equation}
     \vec A =
     \begin{pmatrix}
@@ -60,6 +61,7 @@ where $H$ is a positive integer. We then have a finite set of $N = n^2 = (2H)^2$
         \vdots  & \vdots  & \ddots & \vdots  \\
         A_{N,1} & A_{N,2} & \dots  & A_{N,N} \\
     \end{pmatrix}
+    \label{eq:theMatrix}
 \end{equation}
 where $A_{i, j}$ is the pre-factor before $r$ in the sum in \cref{eq:rayleigh},
 \begin{equation}
@@ -83,26 +85,61 @@ Further we have
     \end{pmatrix}
 \end{equation}
 and
+% \begin{align*}
+%     &\cbr{\vec h_i} = \vec h_1, \vec h_2, \dots, \vec h_n \\
+%     &\phantom{\cbr{\vec h_i}{}} = \del{h_1, h_1}, \del{h_1, h_2}, \dots, \del{h_1, h_{n-1}}, \del{h_1, h_n}, \\
+%     &\phantom{\cbr{\vec h_i} = {}} \del{h_2, h_1}, \del{h_2, h_2}, \dots, \del{h_2, h_{n-1}}, \del{h_2, h_n}, \\
+%     &\hspace{5cm} \vdots \\
+%     &\phantom{\cbr{\vec h_i} = {}} \del{h_{n-1}, h_1}, \del{h_{n-1}, h_2}, \dots, \del{h_{n-1}, h_{n-1}}, \del{h_{n-1}, h_n}, \\
+%     &\phantom{\cbr{\vec h_i} = {}} \del{h_n, h_1}, \del{h_n, h_2}, \dots, \del{h_n, h_{n-1}}, \del{h_n, h_n} \\
+% \end{align*}
 \begin{align*}
-    &\cbr{\vec h_i} = \vec h_1, \vec h_2, \dots, \vec h_n \\
-    &\phantom{\cbr{\vec h_i}{}} = \del{h_1, h_1}, \del{h_1, h_2}, \dots, \del{h_1, h_{n-1}}, \del{h_1, h_n}, \\
-    &\phantom{\cbr{\vec h_i} = {}} \del{h_2, h_1}, \del{h_2, h_2}, \dots, \del{h_2, h_{n-1}}, \del{h_2, h_n}, \\
-    &\hspace{5cm} \vdots \\
-    &\phantom{\cbr{\vec h_i} = {}} \del{h_{n-1}, h_1}, \del{h_{n-1}, h_2}, \dots, \del{h_{n-1}, h_{n-1}}, \del{h_{n-1}, h_n}, \\
-    &\phantom{\cbr{\vec h_i} = {}} \del{h_n, h_1}, \del{h_n, h_2}, \dots, \del{h_n, h_{n-1}}, \del{h_n, h_n} \\
+    \cbr{\vec h_i} = \vec h_1, \vec h_2, \dots, \vec h_n =
+    \begin{matrix}
+        \del{h_1, h_1}, &\del{h_1, h_2}, &\dots &\del{h_1, h_{n-1}}, &\del{h_1, h_n}, \\
+        \del{h_2, h_1}, &\del{h_2, h_2}, &\dots &\del{h_2, h_{n-1}}, &\del{h_2, h_n}, \\
+        \vdots &\vdots &\ddots &\vdots &\vdots  \\
+        \del{h_{n-1}, h_1}, &\del{h_{n-1}, h_2}, &\dots &\del{h_{n-1}, h_{n-1}}, &\del{h_{n-1}, h_n}, \\
+        \del{h_n, h_1}, &\del{h_n, h_2}, &\dots &\del{h_n, h_{n-1}}, &\del{h_n, h_n}.
+    \end{matrix}
 \end{align*}
-In practice this is implemented as
+($\cbr{\vec h_i}$ is not not a matrix, but is represented in a matrix form above to more easily make the connection to the matrix in \cref{eq:theMatrix}). In practice this is implemented as
 \begin{equation}
     \vec h_ i = (h_j, h_k) ~~\text{where}~~ j = i \sslash n ~~\text{and}~~ k = i \bmod n,
 \end{equation}
-where $\sslash$ is integer division and $\mathrm{mod}$ is the \emph{modulo} operator.
+where $\sslash$ is integer division and $\mathrm{mod}$ is the \emph{modulo} operator. This allows us to loop over the linear index $i$ in the code.
 
 \subsection*{The $\hat I$-integral}
-For a \emph{doubly periodic cosine profile} of period $a$ and amplitude $\xi_0$ we can calculate the $\hat I$-integral in closed form
+For a \emph{doubly periodic cosine profile} of period $a$ and amplitude $\xi_0$ we can calculate the $\hat I$-integral in closed form as \cite{maradudin2018features}
 \begin{equation}
     \hat I\del[1]{\gamma\vert \vec G_\|(\vec h)} = (-i)^{h_1} \mathrm{J}_{h_1}\del{\frac{\gamma\xi_0}{2}} (-i)^{h_2} \mathrm{J}_{h_2}\del{\frac{\gamma\xi_0}{2}},
 \end{equation}
 where $\mathrm{J}_n(\cdot)$ is the Bessel function of first kind and order $n$. The Bessel functions are evaluated via the \texttt{SciPy} function \texttt{scipy.special.jv} with the argument \texttt{order=n}.
 
+For a truncated cone surface profile it can be shown that \cite{maradudin2018features}
+\begin{align}
+    \hat I\del[1]{\gamma\vert \vec G_\|(\vec h)} = {}
+    &\delta_{\vec G_\|, \vec 0} + 2\pi \frac{\rho_t^2}{a^2} \sbr[2]{\exp\del{-i\gamma\xi_0}}\frac{J_1\del[1]{G_\| \rho_t}}{G_\| \rho_t} \\
+    & + 2\pi\frac{\rho_b - \rho_t}{a^2} \sum_{n=1}^{\infty} \frac{\del{-i\gamma\xi_0}^n}{n!}
+    \int_0^1 \dif u_\| \sbr[1]{\rho_b - \del[0]{\rho_b - \rho_t}u_\|} J_0 \del[2]{G_\| \sbr[1]{\rho_b - \del[0]{\rho_b - \rho_t}u_\|}} u_\|^n,
+    \label{eq:truncatedCone}
+\end{align}
+where $\delta$ is the Kronecker-delta, and a change of variable has been performed
+\begin{equation}
+    u_\| = \frac{\rho_b - x_\|}{\rho_b - \rho_t}.
+\end{equation}
+
+Finally, for a truncated cosine surface profile we have \cite{maradudin2018features}
+\begin{align}
+    \hat I\del[1]{\gamma\vert \vec G_\|(\vec h)} = 
+    \delta_{\vec G_\|, \vec 0} + 
+    \frac{2\pi}{a^2} \sum_{n=1}^{\infty} \frac{\del{-i\gamma}^n}{n!}
+    \int_0^{\rho_0} \dif x_\| x_\| J_0 \del[1]{G_\| x_\|}\xi^n\del[0]{x_\|}
+    \label{eq:truncatedCosine}
+\end{align}
+
+The integrals in \cref{eq:truncatedCone,eq:truncatedCosine} were evaluated numerically, and enough terms were included in the sum for it to converge (typically 5-10 terms were needed).
+
 \subsection*{Nondimensionalizing}
-We now have all the components we need to solve \cref{eq:rayleigh}, but first we will non-dimensionalize the equations. Using the wavelength as the length scale $x_0 = \lambda$ we 
+% We now have all the components we need to solve \cref{eq:rayleigh}, but first we will non-dimensionalize the equations. Using the wavelength as the length scale $x_0 = \lambda$ we 
+We will be using the wavelength as the length scale $x_0 = \lambda$ when numerically solving the equations.
