--- a/Assignment 02/report/report.tex
+++ b/Assignment 02/report/report.tex
@@ -8,7 +8,7 @@
 \usepackage{bm}
 \usepackage{enumitem}
 \usepackage{soulutf8}
-\usepackage{ulem} % \sout and \xout for strikethrough/cancel text
+\usepackage[normalem]{ulem} % \sout and \xout for strikethrough/cancel text
 % \usepackage{layouts} % so we can do \printinunitsof{in}\prntlen{\textwidth}
 \usepackage{mathtools}
 \usepackage{commath2, commath2-additions}
