--- a/Assignment 02/report/results.tex
+++ b/Assignment 02/report/results.tex
@@ -114,7 +114,7 @@ In \cref{fig:eigenvalues_roots} we have plots of the number of eigenstates with 
     % \item \sout{Estimate barrier height that separates having one eigenstate with $\lambda_n < \nu_0$ and having no such states}
     \item (Plot time evolution using Euler scheme for TISE (eq. 3.6))
     \item Plot time evolution using C-N scheme for TISE (eq. 3.8)
-    \item \hl{Discuss when it's advantageous to use step-by-step time evolution. Does it depend on the initial condition? Make a few hypotheses, and test the ideas.}
+    \item Time-dependent Hamiltonian!! \hl{Discuss when it's advantageous to use step-by-step time evolution. Does it depend on the initial condition? Make a few hypotheses, and test the ideas.}
 \end{itemize}
 
 \subsection*{Two-level double well system}
