--- a/Assignment 02/report/theory.tex
+++ b/Assignment 02/report/theory.tex
@@ -76,7 +76,7 @@ For a box with a potential barrier the potential is modified as follows
 \end{equation}
 where $\nu_0 = t_0 V_0/\hbar$ is a dimensionless measure of the strength of the potential barrier.
 
-\subsubsection{Periodic detuning of a two-level system}
+\subsubsection*{Periodic detuning of a two-level system}
 Introducing a time-dependent potential
 \begin{equation}
 \nu(x') = 
